--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,15 +12,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 11
+    # Check out the repository
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    # Set up JDK 11
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
 
+    # Set up Android SDK
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v2
+      with:
+        api-level: 33
+        build-tools: 33.0.2
+        ndk: 25.1.8937393
+
+    # Grant execute permission for Gradle wrapper
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+
+    # Build the project with Gradle
+    - name: Build APK
+      run: ./gradlew assembleDebug
+
+    # Upload the APK as an artifact
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: app-debug
+        path: app/build/outputs/apk/debug/app-debug.apk
